# GEOSana_GridComp

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GEOS_AnaGridComp.F90  GNUmakefile  README.md  read_prepbufr.f90
GEOSaana_GridComp/GSI_GridComp/: .gitignore  CMakeLists.txt  CMakeLists.txt.org  CMakeLists.txt.orig  CMakeLists.txt.test  GNUmakefile  GSI_GridCompMod.F90  GSI_GridCompMod.F90.1st  GSI_GridCompMod.F90.orig2  GSI_GridCompMod.F90.orig3.hs_stdv  Makefile  Makefile.dependency  Makefile.src  abstract_ensmod.f90  abstract_ensmod.f90.frocean  adjtest_obs.f90  advect_cv.f90  aircraftinfo.f90  allsky_mod.f90  analyzer  anisofilter_glb.f90  antest_maps0.f90  atms_spatial_average_mod.f90  berror.f90  berror.pl  bicg.f90  bicg.f90.update_vertical_localization_pblh  bkerror.f90  bkgcov.f90  bkgvar.f90  bkgvar_rewgt.f90  calc_fov_crosstrk.f90  clw_mod.f90  compute_derived.f90.1st  compute_derived.f90.2nd_3pbl  compute_derived.f90.2nd_3pbl_not_log_pblh  compute_derived.f90.3nd_clean_cntl_exp_just_test  compute_qvar3d.f90  compute_qvar3d.f90.1st  compute_qvar3d.f90.2nd  (+319 more)
GEOSaana_GridComp/GSI_GridComp/etc/: CMakeLists.txt  GNUmakefile  anavinfo_arw_binary  anavinfo_arw_netcdf  check_satbang.py  global_anavinfo.l64.txt  global_anavinfo_new.l64.txt  global_ozinfo.txt  global_scaninfo.txt  gmao_airs_bufr.tbl  gmao_global_anavinfo.txt  gmao_global_anavinfo.txt.orig  gmao_global_anavinfo_l132.txt  gmao_global_anavinfo_l181.txt  gmao_global_anavinfo_l40.rc  gmao_global_anavinfo_l91.txt  gmao_global_anavinfo_rcov.txt  gmao_global_blacklist.txt  gmao_global_cloudy_radiance_info.txt  gmao_global_coinfo.txt  gmao_global_convinfo.txt  gmao_global_convinfo.txt.orig  gmao_global_hybens_betainfo.l137.txt  gmao_global_hybens_betainfo.l72.txt  gmao_global_hybens_info.x1152y721l132.txt  gmao_global_hybens_info.x1152y721l91.txt  gmao_global_hybens_info.x288y181l132.txt  gmao_global_hybens_info.x288y181l181.txt  gmao_global_hybens_info.x288y181l72.txt  gmao_global_hybens_info.x288y181l91.txt  gmao_global_hybens_info.x576y361l132.txt  gmao_global_hybens_info.x576y361l181.txt  gmao_global_hybens_info.x576y361l72.txt  gmao_global_hybens_info.x576y361l91.txt  gmao_global_hybens_locinfo.l137.txt  gmao_global_hybens_locinfo.l72.txt  gmao_global_iextra_qcindex_table.txt  gmao_global_ozinfo.txt  gmao_global_rad_time_thin.txt  gmao_global_satinfo.txt  (+19 more)
GEOSaana_GridComp/GSI_GridComp/gnssrn_pblh_from_bufr/: ioda_gnssro_bufr2nc.sh  loop_ncl_script.sh  read_nclfile_twopeaks.ncl
GEOSaana_GridComp/GSI_GridComp/mksi/: CMakeLists.txt  GNUmakefile  Makefile  convtbl_extract  gsiinfo.pl  m_actvchan.F90  m_actvotype.F90  m_convtmpl.F90  m_icld.F90  m_oztmpl.F90  m_pcscaling.F90  m_sirest.F90  m_sitmpl.F90  main.F90  make_convinfo.F90  make_ozinfo.F90  pcscaling_main.F90  satinfo_util.F90  setup.nml
GEOSaana_GridComp/GSI_GridComp/raob_pblh_from_diag/: CMakeLists.txt  calculate_pblh_from_raob_diag.f90.Jan09_2024_no_min_qgrad_pblh
GEOSaana_GridComp/GSI_GridComp/read_pblh_data/: CMakeLists.txt  combine_pblh_mplnet.f90  combine_pblh_wp.f90  note
g5pert/fvgcm/: CHANGES  CMakeLists.txt  GMAO_fvbase.mk  GMAO_fvgcm.mk  GNUmakefile  Make.rules  QuickStart  README  TUTORIAL  choose_makemacros  diag.tbl  expn.inst.tmpl  fvgcm.F  fvsetdim
g5pert/fvgcm/atmlnd_share/: CMakeLists.txt  GNUmakefile  datetime.F90  gauaw_mod.F90  infnan.F90  ioFileMod.F90  linebuf_stdout.c  misc.h  precision.F90  string_utils.F90  wrap_mpi.F90
g5pert/fvgcm/cf/: Make.macros.AIX  Make.macros.AIX.new  Make.macros.CRAY  Make.macros.CRAY_T3E  Make.macros.IRIX64  Make.macros.IRIX64.new  Make.macros.Linux  Make.macros.Linux.IA64  Make.macros.Linux.PGI  Make.macros.Linux.SPMD  Make.macros.Linux.SPMD.LAM  Make.macros.Linux.new  Make.macros.Linux.new.LAM  Make.macros.NAS  Make.macros.OSF1  Make.macros.PGI  Make.macros_FFC  define.m4.tmpl  script.m4.tmpl
g5pert/fvgcm/csm_share/: CMakeLists.txt  GNUmakefile  shr_const_mod.F90  shr_msg_mod.F90  shr_sys_mod.F90  shr_timer_mod.F90
g5pert/fvgcm/drvs/: CMakeLists.txt  GNUmakefile  get_srf.F  haloe_h2o.F  initcon.F  interp.F  intpz.F  leap_year.F  mcalday.F  moistdrv.F  physbuf.h  physdrv.F  readrst.F  readsrf.F  rst_dyn.F  rst_phys.F  sas_drv.F  setup.F  tick.F90  writerst.F
g5pert/fvgcm/ecmfft/: CMakeLists.txt  GNUmakefile  adrfftmlt.F90  fax.F  fft99.F  fft99a.F  fft99b.F  fftfax.F  fftrig.F  rfftmlt.F  vpassm.F
g5pert/fvgcm/fvadm/: AnIntro  CMakeLists.txt  Externals.depend  GNUmakefile  a2d3d_ad.F90  age_of_air_ad.F90  avgc_ad.F90  benergy_ad.F90  cd_core_ad.F90  control_ad.F90  d2a2_ad.F90  d2a3d_ad.F90  dependent_ad.F90  dry_adj_ad.F90  fill_module_ad.F90  fvcore_ad.F90  geopk_ad.F90  hswf_ad.F90  m_model_ad.F90  m_physdrv1_ad.F90  mapz_module_ad.F90  par_vecsum_ad.F90  pft2d_ad.F90  pkez_ad.F90  prognostics_ad.F90  stepon_ad.F  sw_core_ad.F90  t2th_ad.F90  th2t_ad.F90  tp_core_ad.F90  trac2d_ad.F90  upol5_ad.F90  vpol5_ad.F90
g5pert/fvgcm/fvcore/: CMakeLists.txt  GNUmakefile  a2d3d.F90  avgc.F90  benergy.F90  cd_core.F90  control.F90  controlq.F90  d2a2.F90  d2a3d.F90  d_split.F90  dependent.F90  dependentq.F90  fill_module.F90  fillz.F90  func.F90  fvcore.F90  geopk.F90  highp2.F90  initfunc.F90  m_delp2ps.F90  m_iostate.F  m_pftSV.F90  m_trajmng.F  m_trjphys.F90  mapz_module.F90  nlmodel.F90  pft2d.F90  pft_cf.F90  pkez.F90  polavg.F90  postfunc.F90  prognostics.F90  prognostics_q.F90  setfunc.F90  setrig.F90  stepon.F  sw_core.F90  tp_core.F90  trac2d.F90  (+3 more)
g5pert/fvgcm/fvptrace/: AnIntro  CMakeLists.txt  External.depend  GNUmakefile  README  age_of_air_tad.F90  age_of_air_ttl.F90  cd_core_tad.F90  cd_core_ttl.F90  fill_module_tad.F90  fill_module_ttl.F90  fvcore_tad.F90  fvcore_ttl.F90  m_model_tad.F90  m_model_ttl.F90  mapz_module_tad.F90  mapz_module_ttl.F90  stepon_tad.F  stepon_ttl.F  sw_core_tad.F90  sw_core_ttl.F90  tp_core_tad.F90  tp_core_ttl.F90  trac2d_tad.F90  trac2d_ttl.F90
g5pert/fvgcm/fvtlm/: AnIntro  CMakeLists.txt  Externals.depend  GNUmakefile  a2d3d_tl.F90  age_of_air_tl.F90  avgc_tl.F90  benergy_tl.F90  cd_core_tl.F90  cnvpert_tl.F90  control_tl.F90  d2a2_tl.F90  (+22 more)
(+862 files in other folders)
